initial index.html work and js file created

--- a/index.html
+++ b/index.html
@@ -29,10 +29,75 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <main>
+        <div class="row" id="9AM">
+          <div class="col-1 time-block">9AM</div>
+          <input class="col-10" type="text" id="9AMInput" /><button
+            class="col-1 saveBtn"
+            id="9AMSubmitBtn"
+          ></button>
+        </div>
+        <div class="row" id="10AM">
+          <div class="col-1 time-block">10AM</div>
+          <input class="col-10" type="text" id="10AMInput" /><button
+            class="col-1 saveBtn"
+            id="10AMSubmitBtn"
+          ></button>
+        </div>
+        <div class="row" id="11AM">
+          <div class="col-1 time-block">11AM</div>
+          <input class="col-10" type="text" id="11AMInput" /><button
+            class="col-1 saveBtn"
+            id="11AMSubmitBtn"
+          ></button>
+        </div>
+        <div class="row" id="12PM">
+          <div class="col-1 time-block">12PM</div>
+          <input class="col-10" type="text" id="12PMInput" /><button
+            class="col-1 saveBtn"
+            id="12PMSubmitBtn"
+          ></button>
+        </div>
+        <div class="row" id="1PM">
+          <div class="col-1 time-block">1PM</div>
+          <input class="col-10" type="text" id="1PMInput" /><button
+            class="col-1 saveBtn"
+            id="1PMSubmitBtn"
+          ></button>
+        </div>
+        <div class="row" id="2PM">
+          <div class="col-1 time-block">2PM</div>
+          <input class="col-10" type="text" id="2PMInput" /><button
+            class="col-1 saveBtn"
+            id="2PMSubmitBtn"
+          ></button>
+        </div>
+        <div class="row" id="3PM">
+          <div class="col-1 time-block">3PM</div>
+          <input class="col-10" type="text" id="3PMInput" /><button
+            class="col-1 saveBtn"
+            id="3PMSubmitBtn"
+          ></button>
+        </div>
+        <div class="row" id="4PM">
+          <div class="col-1 time-block">4PM</div>
+          <input class="col-10" type="text" id="4PMInput" /><button
+            class="col-1 saveBtn"
+            id="4PMSubmitBtn"
+          ></button>
+        </div>
+        <div class="row" id="5PM">
+          <div class="col-1 time-block">5PM</div>
+          <input class="col-10" type="text" id="5PMInput" /><button
+            class="col-1 saveBtn"
+            id="5PMSubmitBtn"
+          ></button>
+        </div>
+      </main>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
