--- a/index.html
+++ b/index.html
@@ -32,63 +32,63 @@
       <main>
         <div class="row" id="9AM">
           <div class="col-1 time-block">9AM</div>
-          <input class="col-10" type="text" id="9AMInput" /><button
+          <input class="col-10" type="text" id="9" /><button
             class="col-1 saveBtn"
             id="9AMSubmitBtn"
           ></button>
         </div>
         <div class="row" id="10AM">
           <div class="col-1 time-block">10AM</div>
-          <input class="col-10" type="text" id="10AMInput" /><button
+          <input class="col-10" type="text" id="10" /><button
             class="col-1 saveBtn"
             id="10AMSubmitBtn"
           ></button>
         </div>
         <div class="row" id="11AM">
           <div class="col-1 time-block">11AM</div>
-          <input class="col-10" type="text" id="11AMInput" /><button
+          <input class="col-10" type="text" id="11" /><button
             class="col-1 saveBtn"
             id="11AMSubmitBtn"
           ></button>
         </div>
         <div class="row" id="12PM">
           <div class="col-1 time-block">12PM</div>
-          <input class="col-10" type="text" id="12PMInput" /><button
+          <input class="col-10" type="text" id="12" /><button
             class="col-1 saveBtn"
             id="12PMSubmitBtn"
           ></button>
         </div>
         <div class="row" id="1PM">
           <div class="col-1 time-block">1PM</div>
-          <input class="col-10" type="text" id="1PMInput" /><button
+          <input class="col-10" type="text" id="13" /><button
             class="col-1 saveBtn"
             id="1PMSubmitBtn"
           ></button>
         </div>
         <div class="row" id="2PM">
           <div class="col-1 time-block">2PM</div>
-          <input class="col-10" type="text" id="2PMInput" /><button
+          <input class="col-10" type="text" id="14" /><button
             class="col-1 saveBtn"
             id="2PMSubmitBtn"
           ></button>
         </div>
         <div class="row" id="3PM">
           <div class="col-1 time-block">3PM</div>
-          <input class="col-10" type="text" id="3PMInput" /><button
+          <input class="col-10" type="text" id="15" /><button
             class="col-1 saveBtn"
             id="3PMSubmitBtn"
           ></button>
         </div>
         <div class="row" id="4PM">
           <div class="col-1 time-block">4PM</div>
-          <input class="col-10" type="text" id="4PMInput" /><button
+          <input class="col-10" type="text" id="16" /><button
             class="col-1 saveBtn"
             id="4PMSubmitBtn"
           ></button>
         </div>
         <div class="row" id="5PM">
           <div class="col-1 time-block">5PM</div>
-          <input class="col-10" type="text" id="5PMInput" /><button
+          <input class="col-10" type="text" id="17" /><button
             class="col-1 saveBtn"
             id="5PMSubmitBtn"
           ></button>
