complete except for button icons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <main>
+      <main id="calendarBlock">
         <div class="row" id="9AM">
           <div class="col-1 time-block">9AM</div>
           <input class="col-10" type="text" id="9" /><button
