font awesome icon added to button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -35,63 +39,81 @@
           <input class="col-10" type="text" id="9" /><button
             class="col-1 saveBtn"
             id="9AMSubmitBtn"
-          ></button>
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
         <div class="row" id="10AM">
           <div class="col-1 time-block">10AM</div>
           <input class="col-10" type="text" id="10" /><button
             class="col-1 saveBtn"
             id="10AMSubmitBtn"
-          ></button>
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
         <div class="row" id="11AM">
           <div class="col-1 time-block">11AM</div>
           <input class="col-10" type="text" id="11" /><button
             class="col-1 saveBtn"
             id="11AMSubmitBtn"
-          ></button>
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
         <div class="row" id="12PM">
           <div class="col-1 time-block">12PM</div>
           <input class="col-10" type="text" id="12" /><button
             class="col-1 saveBtn"
             id="12PMSubmitBtn"
-          ></button>
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
         <div class="row" id="1PM">
           <div class="col-1 time-block">1PM</div>
           <input class="col-10" type="text" id="13" /><button
             class="col-1 saveBtn"
             id="1PMSubmitBtn"
-          ></button>
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
         <div class="row" id="2PM">
           <div class="col-1 time-block">2PM</div>
           <input class="col-10" type="text" id="14" /><button
             class="col-1 saveBtn"
             id="2PMSubmitBtn"
-          ></button>
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
         <div class="row" id="3PM">
           <div class="col-1 time-block">3PM</div>
           <input class="col-10" type="text" id="15" /><button
             class="col-1 saveBtn"
             id="3PMSubmitBtn"
-          ></button>
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
         <div class="row" id="4PM">
           <div class="col-1 time-block">4PM</div>
           <input class="col-10" type="text" id="16" /><button
             class="col-1 saveBtn"
             id="4PMSubmitBtn"
-          ></button>
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
         <div class="row" id="5PM">
           <div class="col-1 time-block">5PM</div>
           <input class="col-10" type="text" id="17" /><button
             class="col-1 saveBtn"
             id="5PMSubmitBtn"
-          ></button>
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </main>
     </div>
